Clean up: Remove unused .md files and backup files, move API credentials to hidden config file

--- a/content-locker/example.html
+++ b/content-locker/example.html
@@ -77,6 +77,8 @@
         </div>
     </div>
     
+    <!-- AdBlueMedia Content Locker Configuration (load before locker script) -->
+    <script src="adblue-config.js"></script>
     <!-- AdBlueMedia Content Locker JavaScript -->
     <script src="adbluemedia-locker.js"></script>
     
