--- a/details.html
+++ b/details.html
@@ -1142,6 +1142,8 @@
         });
     </script>
     
+    <!-- AdBlueMedia Content Locker Configuration (load before locker script) -->
+    <script src="content-locker/adblue-config.js"></script>
     <!-- AdBlueMedia Content Locker JavaScript -->
     <script src="content-locker/adbluemedia-locker.js"></script>
 </body>
